# VanityForge

./: .env.config  .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.grinder  INFRASTRUCTURE.md  ROADMAP.md  build_installer.py  check_sns_rpc.py  codebase_dump.txt  faq.html  gitbook_content.md  grinder_job_entry.py  grinder_worker.py  i18n.js  index.html  launcher.py  main.py  patch.diff  readme.md  requirements.txt  roadmap.html  test_grinder.py  trigger.yaml  vanity.js  verify_sns.py  vm_server.py  vvvip.html  whitepaper_summary.md  worker_cpu.py
cpu-grinder/: Cargo.toml
cpu-grinder/src/: main.rs
gpu-worker/: Cargo.toml  Dockerfile  requirements.txt  worker.py
gpu-worker/src/: main.rs
locales/: en.json  zh-CN.json
redpanda-cpu/: Cargo.toml
redpanda-cpu/src/: main.rs
solanity-gpu/: Dockerfile  Makefile  PHASE1_NOTES.txt  common.cu  entrypoint.sh  fe.cu  fe.h  fe_ptx.cuh  ge.cu  gpu_ctx.cu  gpu_grinder.cu  keypair.cu  main.cu  main.cu.orig  precomp_data.h  requirements.txt  sc.cu  sha512.cu  sha512_ed25519.cuh  sign.cu  verify.cu  worker.py
utils/: sns.js  stats_engine.py
verification/: verify_admin.py  verify_changes.py  verify_fixes.py  verify_frontend_change.py  verify_gpu_mode.py  verify_landing_page.py  verify_layout.py  verify_polling.py  verify_referrals.py  verify_sdk_load.py  verify_sns.py  verify_sns_import.py  verify_stats.py  verify_vvvip.py  verify_vvvip_interaction.py  verify_vvvip_load.py  verify_wallet.py
