[package]
name = "vanity-grinder"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
bs58 = "0.4"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Explicitly pin indexmap to a stable version to prevent future conflicts
indexmap = "=2.1.0"
