[package]
name = "redpanda-cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1", features = ["rand_core"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
bs58 = "0.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
